# place-collector

./: .gitignore  .pre-commit-config.yaml  README.md  conftest.py  local.yml  manage.py  merge_production_dotenvs_in_dotenv.py  production.yml  pyproject.toml  setup.cfg  tasks.py
.envs/.local/: .postgres
.git-hooks/: pre-push
.github/workflows/: ci.yml
apps/collector/: admin.py  apps.py  factories.py  forms.py  models.py  urls.py  views.py
apps/collector/migrations/: 0001_initial.py  0001_squashed_0007_alter_place_user.py  0002_auto_20220524_0436.py  0003_place_user.py  0004_auto_20220525_0301.py  0005_auto_20220525_0307.py  0006_auto_20220525_0318.py  0007_alter_place_user.py
apps/collector/tests/: test_places.py
apps/users/: models.py  urls.py  views.py
apps/users/tests/: test_urls.py  test_views.py
compose/local/django/: Dockerfile  start
compose/production/django/: Dockerfile
compose/production/traefik/: Dockerfile  traefik.yml
config/: api_router.py  celery_app.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
docs/: conf.py  howto.rst  index.rst  make.bat  users.rst
place_collector/: conftest.py
place_collector/collector/: models.py  urls.py  views.py
place_collector/contrib/sites/migrations/: 0003_set_site_domain_and_name.py
place_collector/templates/: base.html
place_collector/templates/collector/: list_places.html
place_collector/users/: admin.py  apps.py  urls.py  views.py
place_collector/users/tests/: test_admin.py  test_drf_urls.py  test_drf_views.py  test_forms.py  test_models.py  test_tasks.py  test_urls.py  test_views.py
provision/: django.py  docker.py  git.py  linters.py  project.py  tests.py
requirements/: base.in  base.txt  development.in  development.txt  production.in
scripts/: fill_sample_data.py
templates/: base.html
templates/collector/: add_places.html  detail_place.html  list_places.html  update_place.html
templates/users/: user_detail.html
