[tool.poetry]
name = "place_collector"
version = "0.1.0"
description = ""
authors = ["ZZaRRyaDD"]

[tool.poetry.dependencies]
python = "^3.10"
cookiecutter = "^1.7.3"
invoke = "^1.7.0"
pytz = "^2022.1"
python-slugify = "^6.1.1"
Pillow = "^9.1.0"
argon2-cffi = "^21.3.0"
whitenoise = "^6.0.0"
redis = "^4.2.2"
hiredis = "^2.0.0"
celery = "^5.2.6"
django-celery-beat = "^2.2.1"
flower = "^1.0.0"
django-environ = "^0.8.1"
django-model-utils = "^4.2.0"
django-allauth = "^0.50.0"
django-crispy-forms = "^1.14.0"
crispy-bootstrap5 = "^0.6"
django-redis = "^5.2.0"
djangorestframework = "^3.13.1"
django-cors-headers = "^3.11.0"
drf-spectacular = "^0.22.0"
rich = "^12.2.0"
pylint = "^2.13.7"
autopep8 = "^1.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
