[tool.poetry]
name = "place_collector"
version = "0.1.0"
description = ""
authors = ["Nazar <odddellarobea@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
amqp = "^5.1.1"
anyio = "^3.6.1"
argon2-cffi = "^21.3.0"
argon2-cffi-bindings = "^21.2.0"
asgiref = "^3.5.2"
astroid = "^2.11.5"
asttokens = "^2.0.5"
async-timeout = "^4.0.2"
attrs = "^21.4.0"
autopep8 = "^1.6.0"
backcall = "^0.2.0"
billiard = "^4.0.0"
black = "^22.3.0"
certifi = "^2021.10.8"
cffi = "^1.15.0"
cfgv = "^3.3.1"
charset-normalizer = "^2.0.12"
click = "^8.1.3"
click-didyoumean = "^0.3.0"
click-plugins = "^1.1.1"
click-repl = "^0.2.0"
commonmark = "^0.9.1"
coreapi = "^2.3.3"
coreschema = "^0.0.4"
coverage = "^6.3.3"
crispy-bootstrap5 = "^0.6"
cryptography = "^37.0.2"
decorator = "^5.1.1"
defusedxml = "^0.7.1"
Deprecated = "^1.2.13"
dill = "^0.3.4"
distlib = "^0.3.4"
Django = "^4.0.4"
django-allauth = "^0.50.0"
django-cors-headers = "^3.12.0"
django-coverage-plugin = "^2.0.3"
django-crispy-forms = "^1.14.0"
django-debug-toolbar = "^3.4.0"
django-environ = "^0.8.1"
django-extensions = "^3.1.5"
django-model-utils = "^4.2.0"
django-stubs = "^1.10.1"
django-stubs-ext = "^0.4.0"
django-timezone-field = "^5.0"
djangorestframework = "^3.13.1"
djangorestframework-stubs = "^1.5.0"
drf-spectacular = "^0.22.1"
executing = "^0.8.3"
factory-boy = "^3.2.1"
Faker = "^13.11.1"
filelock = "^3.7.0"
flake8 = "^4.0.1"
flake8-isort = "^4.1.1"
humanize = "^4.1.0"
identify = "^2.5.0"
idna = "^3.3"
inflection = "^0.5.1"
iniconfig = "^1.1.1"
invoke = "^1.7.1"
ipdb = "^0.13.9"
ipython = "^8.3.0"
isort = "^5.10.1"
itypes = "^1.2.0"
jedi = "^0.18.1"
Jinja2 = "^3.1.2"
jsonschema = "^4.5.1"
kombu = "^5.2.4"
lazy-object-proxy = "^1.7.1"
MarkupSafe = "^2.1.1"
matplotlib-inline = "^0.1.3"
mypy-extensions = "^0.4.3"
nodeenv = "^1.6.0"
oauthlib = "^3.2.0"
packaging = "^21.3"
parso = "^0.8.3"
pathspec = "^0.9.0"
pexpect = "^4.8.0"
pickleshare = "^0.7.5"
Pillow = "^9.1.1"
platformdirs = "^2.5.2"
pluggy = "^1.0.0"
pre-commit = "^2.19.0"
prometheus-client = "^0.14.1"
prompt-toolkit = "^3.0.29"
psycopg2-binary = "^2.9.3"
ptyprocess = "^0.7.0"
pure-eval = "^0.2.2"
py = "^1.11.0"
pycodestyle = "^2.8.0"
pycparser = "^2.21"
pyflakes = "^2.4.0"
Pygments = "^2.12.0"
PyJWT = {extras = ["crypto"], version = "^2.4.0"}
pylint = "^2.13.9"
pylint-django = "^2.5.3"
pylint-plugin-utils = "^0.7"
pyparsing = "^3.0.9"
pyrsistent = "^0.18.1"
pytest = "^7.1.2"
pytest-django = "^4.5.2"
pytest-sugar = "^0.9.4"
python-crontab = "^2.6.0"
python-dateutil = "^2.8.2"
python-slugify = "^6.1.2"
python3-openid = "^3.2.0"
pytz = "^2022.1"
PyYAML = "^6.0"
requests = "^2.27.1"
requests-oauthlib = "^1.3.1"
rich = "^12.4.1"
six = "^1.16.0"
sniffio = "^1.2.0"
sqlparse = "^0.4.2"
stack-data = "^0.2.0"
termcolor = "^1.1.0"
testfixtures = "^6.18.5"
text-unidecode = "^1.3"
toml = "^0.10.2"
tomli = "^2.0.1"
tornado = "^6.1"
traitlets = "^5.2.1"
types-Markdown = "^3.3.20"
types-pytz = "^2021.3.8"
types-PyYAML = "^6.0.7"
types-requests = "^2.27.26"
types-urllib3 = "^1.26.14"
typing-extensions = "^4.2.0"
uritemplate = "^4.1.1"
urllib3 = "^1.26.9"
vine = "^5.0.0"
virtualenv = "^20.14.1"
watchgod = "^0.8.2"
wcwidth = "^0.2.5"
Werkzeug = "^2.1.2"
whitenoise = "^6.1.0"
wrapt = "^1.14.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
